# ReplAPI.it-Python

./: .flake8  .gitignore  README.md  pyproject.toml  requirements.txt  tox.ini
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: balladtest.yml  lint.yml  pr.yml
replapi_it/: __init__.py  core.py  post.py  user.py
replapi_it/classes/: __init__.py  base.py  config.py  post.py  user.py
