[tool.poetry]
name = "replapi-it"
version = "1.0.0"
description = "ReplAPI-It for Python"
authors = ["BD103 <dont@stalk.me>", "JBTY27"]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/ReplAPI-it/Python-ReplAPI-It"

[tool.poetry.dependencies]
python = "^3.8"
jinja2 = "^3.0.1"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
isort = "^5.8.0"
flake8 = "^3.9.2"
2black = { git = "https://github.com/BD103/2black", branch = "main" }

[tool.isort]
profile = "black"
multi_line_output = 3

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

